force-app/main/default/objects/FieloPLT__KPI__c/FieloPLT__KPI__c.object-meta.xml
<CustomObject>
    <description>Defines how your Salesforce Report interacts with your objects - Programs, Promotions and Challenges</description>
    <label>KPI</label>
    <nameField>
        <label>KPI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KPIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>