force-app/main/default/objects/FieloPLT__KPI__c/fields/FieloPLT__Frequency__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Frequency__c</fullName>
    <description>How often a KPI will be measured.</description>
    <inlineHelpText>Choose how often you want your KPI to be measured.</inlineHelpText>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Quarterly</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Semesterly</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Annually</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>