force-app/main/default/objects/FieloPLT__KPI__c/fields/FieloPLT__IsCustom__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__IsCustom__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When on, KPI uses a Custom report.</description>
    <inlineHelpText>When on, this KPI uses a Custom report.</inlineHelpText>
    <label>Custom</label>
    <type>Checkbox</type>
</CustomField>