force-app/main/default/objects/FieloPLT__KPI__c/fields/FieloPLT__ReportClass__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ReportClass__c</fullName>
    <description>Class that defines a Custom report type.</description>
    <inlineHelpText>Choose an Apex class for your Custom report.</inlineHelpText>
    <label>Report Class</label>
    <length>80</length>
    <type>Text</type>
</CustomField>