force-app/main/default/objects/FieloPLT__KPI__c/fields/FieloPLT__ReportFilter__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ReportFilter__c</fullName>
    <description>The criteria that link the Report to the Program, Challenge or Promotion record.</description>
    <inlineHelpText>Set the criteria to link your report to the relevant Program, Challenge or Promotion.</inlineHelpText>
    <label>Report Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>