force-app/main/default/objects/FieloPLT__KPI__c/fields/FieloPLT__ReportMetadata__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ReportMetadata__c</fullName>
    <description>JSON string which contains formatting data for Custom Reports. Used internally.</description>
    <inlineHelpText>This is a JSON string containing formatting data for Custom Reports.</inlineHelpText>
    <label>Report Metadata</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>