force-app/main/default/objects/FieloPLT__KPI__c/fields/FieloPLT__ReportObjectiveField__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ReportObjectiveField__c</fullName>
    <description>The field containing the data to be compared against a fixed numerical objective or metric.</description>
    <inlineHelpText>Select the field that contains the data you want to compare against a fixed numerical objective or metric.</inlineHelpText>
    <label>Report Objective Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>