force-app/main/default/objects/FieloPLT__KPI__c/fields/FieloPLT__ReportType__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ReportType__c</fullName>
    <description>The framework for a report. Standard is for a Salesforce standard report and Custom is for a custom report model.</description>
    <inlineHelpText>Choose the framework for your report: &quot;Standard&quot; to use a Salesforce standard report or &quot;Custom&quot; to use a custom model.</inlineHelpText>
    <label>Report Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>