force-app/main/default/objects/FieloPLT__KPI__c/fields/FieloPLT__ReportUniqueName__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ReportUniqueName__c</fullName>
    <description>The report where the data for a KPI resides.</description>
    <inlineHelpText>Select the Salesforce Report that contains the data for your KPI.</inlineHelpText>
    <label>Report Unique Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>