force-app/main/default/objects/FieloPLT__KPI__c/fields/FieloPLT__RuleTrigger__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__RuleTrigger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Action (Rule) Trigger that defines how records are processed to generate an outcome for a report.</description>
    <inlineHelpText>Action (Rule) Trigger that defines how records are processed to generate an outcome for your report.</inlineHelpText>
    <label>Action Trigger</label>
    <referenceTo>FieloPLT__RuleTrigger__c</referenceTo>
    <relationshipLabel>KPIs</relationshipLabel>
    <relationshipName>KPIs</relationshipName>
    <type>Lookup</type>
</CustomField>