force-app/main/default/objects/FieloPLT__KPI__c/fields/FieloPLT__Type__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Type__c</fullName>
    <description>The Fielo object the KPI is related to. Options are Program, Promotion and Challenge.</description>
    <inlineHelpText>Choose the Fielo object your KPI is related to.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Program</fullName>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Challenge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>